유저 도메인과 타 도메인 분리  (#193)